/*
 * Licensed to the Fintech Open Source Foundation (FINOS) under one or
 * more contributor license agreements. See the NOTICE file distributed
 * with this work for additional information regarding copyright ownership.
 * FINOS licenses this file to you under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with the
 * License. You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package tracdap.api.internal;

option java_package = "org.finos.tracdap.api.internal";
option java_outer_classname = "InternalMessagingProto";
option java_multiple_files = true;

import "tracdap/metadata/config.proto";


/**
 * Internal API to allow messaging between components.
 *
 * This API is likely to be replaced by a message bus in a future release.
 */
service InternalMessagingApi {

  rpc configUpdate(ConfigUpdate) returns (ReceivedStatus);
}

message ReceivedStatus {

  ReceivedCode code = 1;
}

enum ReceivedCode {

  OK = 0;
  IGNORED = 1;
}

message ConfigUpdate{

  string tenant = 1;

  ConfigUpdateType updateType = 2;

  metadata.ConfigEntry configEntry = 3;

  bool secretsUpdated = 4;
}

enum ConfigUpdateType {

  CONFIG_UPDATE_TYPE_NOT_SET = 0;
  CREATE = 1;
  UPDATE = 2;
  DELETE = 3;
}
